--- a/background.html
+++ b/background.html
@@ -1,17 +1,14 @@
-<script type="text/javascript" src="javascripts/jquery.js"></script>
-<script type="text/javascript" src="javascripts/json2.js"></script>
-<script type="text/javascript" src="javascripts/underscore.js"></script>
-<script type="text/javascript" src="javascripts/backbone.js"></script>
-<script type="text/javascript" src="javascripts/backbrace.js"></script>
-<script type="text/javascript" src="javascripts/humane.js"></script>
-<script type="text/javascript" src="javascripts/jquery-ui-1.8.20.custom.min.js"></script>
-<script type="text/javascript" src="javascripts/floataway.jquery.js"></script>
+<script type="text/javascript" src="javascripts/lib/jquery.js"></script>
+<script type="text/javascript" src="javascripts/lib/json2.js"></script>
+<script type="text/javascript" src="javascripts/lib/underscore.js"></script>
+<script type="text/javascript" src="javascripts/lib/backbone.js"></script>
+<script type="text/javascript" src="javascripts/backbrace/backbrace.js"></script>
 
-<script type="text/javascript" src="javascripts/btapp.js"></script>
-<script type="text/javascript" src="javascripts/client.btapp.js"></script>
-<script type="text/javascript" src="javascripts/plugin.btapp.js"></script>
-<script type="text/javascript" src="javascripts/pairing.btapp.js"></script>
-<script type="text/javascript" src="javascripts/jstorage.min.js"></script>
+<script type="text/javascript" src="javascripts/btapp/btapp.js"></script>
+<script type="text/javascript" src="javascripts/btapp/client.btapp.js"></script>
+<script type="text/javascript" src="javascripts/btapp/plugin.btapp.js"></script>
+<script type="text/javascript" src="javascripts/btapp/pairing.btapp.js"></script>
+<script type="text/javascript" src="javascripts/jStorage/jstorage.js"></script>
 
 
 <script>
