removing the requestHeaders request

--- a/background.html
+++ b/background.html
@@ -90,7 +90,7 @@ chrome.webRequest.onBeforeRequest.addListener(
     {
         urls: ["*://*/*.torrent"]
     },  
-    ["blocking","requestHeaders"]
+    ["blocking"]
 );
 
 </script>
