specifying the native pairing dialog type

--- a/background.html
+++ b/background.html
@@ -20,7 +20,8 @@ btapp.connect({
         'btapp/torrent/all/*/file/all/*/properties/all/streaming_url/',
         'btapp/torrent/all/*/file/all/*/properties/all/name/',
         'btapp/add/'
-    ]
+    ],
+    pairing_type: 'native'
 });
 
 var torrents = {};
