switching to a custom mime type and including a version of the plugin that exposes it

--- a/background.html
+++ b/background.html
@@ -30,6 +30,9 @@ btapp.connect({
         'btapp/torrent/all/*/file/all/*/properties/all/name/',
         'btapp/add/'
     ],
+    // If we use the same mime type here as is made available by the basic plugin,
+    // web apps would lose access to it...so we use our custom version. Chrome bug?
+    mime_type: 'application/x-bittorrent-torque-chrome',
     // The choices are 'native' and 'iframe'. As the page for the extension isn't 
     // visible we would never have our pairing request fullfilled.
     pairing_type: 'native'
