adding google analytics tracking

--- a/background.html
+++ b/background.html
@@ -9,7 +9,7 @@
 <script type="text/javascript" src="javascripts/btapp/plugin.btapp.js"></script>
 <script type="text/javascript" src="javascripts/btapp/pairing.btapp.js"></script>
 <script type="text/javascript" src="javascripts/jStorage/jstorage.js"></script>
-
+<script src="javascripts/lib/analytics.js"></script>
 
 <script>
 function isMac() {
