--- a/purchase.html
+++ b/purchase.html
@@ -3,7 +3,7 @@
 	<link rel="stylesheet" type="text/css" href="stylesheets/bootstrap.min.css" />
 	<link rel="stylesheet" type="text/css" href="stylesheets/application.css" />
 	<script type="text/javascript" src="javascripts/jStorage/jstorage.js"></script>
-
+	<script src="analytics.js"></script>
 	<title>
 		Trial Over
 	</title>
